@@ -9,9 +9,11 @@ undeletable_fluids_nope=Nope!
 undeletable_fluids_flush_action=When someone flushes a fluid
 undeletable_fluids_removal_action=When a tank is removed with nowhere for the fluid to go
 undeletable_fluids_destruction_action=When a tank is destroyed with fluid inside
+undeletable_fluids_minimum_threshold=Minimum fluid threshold
 
 [mod-setting-description]
 undeletable_fluids_nope=Replaces the message when someone is blocked from flushing a fluid.
+undeletable_fluids_minimum_threshold=Tanks and pipes with less than this amount of fluid can still be deleted.
 
 [string-mod-setting]
 undeletable_fluids_flush_action-nothing=Do nothing
