@@ -38,12 +38,20 @@ data:extend{
     },
     order = "c"
   },
-  
+  {
+    type = "int-setting",
+    name = "undeletable_fluids_minimum_threshold",
+    setting_type = "runtime-global",
+    default_value = 100,
+    minimum_value = 0,
+    maximum_value = 10000000,
+    order = "d"
+  },
   {
     type = "bool-setting",
     name = "undeletable_fluids_nope",
     setting_type = "runtime-global",
     default_value = false,
-    order = "d"
+    order = "e"
   },
 }
